--- a/for_partial_testing_to_be_deleted.tex
+++ b/for_partial_testing_to_be_deleted.tex
@@ -99,11 +99,19 @@ Single-cell RNA sequencing, expression variability, transcriptional noise, diffe
 \section{Introduction}\label{introduction}}
 
 Single-cell RNA-sequencing (scRNA-seq) enables the study of genome-wide
-transcriptional heterogeneity in cell populations that remains
-otherwise undetected in bulk experiments \citep{Stegle2015, Prakadan2017, Patange2018}. Existing applications range from characterising cell types in
-immunity \citep{Lonnberg2017, Villani2017, Zheng2017} and development
-\citep{Ibarra-Soria2018, Wagner2018, Pijuan-Sala2019} to dissecting the mechanisms
-for cell fate commitment \citep{Goolam2016, Ohnishi2014}.
+transcriptional heterogeneity in cell populations that remains otherwise
+undetected in bulk experiments \citep{Stegle2015, Prakadan2017, Patange2018}.
+Existing applications range from characterising cell types in immunity
+\citep{Lonnberg2017, Villani2017, Zheng2017} and development \citep{Ibarra-Soria2018, Wagner2018, Pijuan-Sala2019} to dissecting the mechanisms for cell fate
+commitment \citep{Goolam2016, Ohnishi2014}.
+Transcriptional heterogeneity within a population of cells can relate to
+different reasons.
+On the broadest level, this heterogeneity can reflect the presence of distinct
+expression profiles associated to cell subtypes or states which could be
+characterised through clustering \citep{Kiselev2019}.
+More subtle gene expression variability within a seemingly homogeneous cell
+population can be due to deterministic or stochastic events, the later being
+referred to as `noise' \citep{Elowitz2002}.
 
 {\small\bibliography{Workflow.bib}}
 
