--- a/Workflow.bib
+++ b/Workflow.bib
@@ -898,3 +898,18 @@ volume = {161},
 year = {2015}
 }
 
+@article{Saelens2019,
+  title = {A Comparison of Single-Cell Trajectory Inference Methods},
+  author = {Saelens, Wouter and Cannoodt, Robrecht and Todorov, Helena and Saeys, Yvan},
+  year = {2019},
+  month = may,
+  volume = {37},
+  pages = {547--554},
+  issn = {1087-0156, 1546-1696},
+  doi = {10.1038/s41587-019-0071-9},
+  file = {/home/alan/Zotero/storage/YZ3DGBAE/Saelens et al. - 2019 - A comparison of single-cell trajectory inference m.pdf},
+  journal = {Nature Biotechnology},
+  language = {en},
+  number = {5}
+}
+
