--- a/Workflow.bib
+++ b/Workflow.bib
@@ -913,3 +913,34 @@ year = {2015}
   number = {5}
 }
 
+@article{Smith1993,
+  title = {Bayesian {{Computation Via}} the {{Gibbs Sampler}} and {{Related Markov Chain Monte Carlo Methods}}},
+  author = {Smith, A. F. M. and Roberts, G. O.},
+  year = {1993},
+  month = sep,
+  volume = {55},
+  pages = {3--23},
+  issn = {00359246},
+  doi = {10.1111/j.2517-6161.1993.tb01466.x},
+  abstract = {The use of the Gibbs sampler for Bayesian computation is reviewed and illustrated in the context of some canonical examples. Other Markov chain Monte Carlo simulation methods are also briefly described, and comments are made on the advantages of sample-based approaches for Bayesian inference summaries.},
+  file = {/home/alan/Zotero/storage/W9RP9PJS/Smith and Roberts - 1993 - Bayesian Computation Via the Gibbs Sampler and Rel.pdf},
+  journal = {Journal of the Royal Statistical Society: Series B (Methodological)},
+  language = {en},
+  number = {1}
+}
+@article{Cowles1996,
+  title = {Markov {{Chain Monte Carlo Convergence Diagnostics}}: {{A Comparative Review}}},
+  shorttitle = {Markov {{Chain Monte Carlo Convergence Diagnostics}}},
+  author = {Cowles, Mary Kathryn and Carlin, Bradley P.},
+  year = {1996},
+  month = jun,
+  volume = {91},
+  pages = {883--904},
+  issn = {0162-1459, 1537-274X},
+  doi = {10.1080/01621459.1996.10476956},
+  file = {/home/alan/Zotero/storage/HI2LZNDX/Cowles and Carlin - 1996 - Markov Chain Monte Carlo Convergence Diagnostics .pdf},
+  journal = {Journal of the American Statistical Association},
+  language = {en},
+  number = {434}
+}
+
